antigen-macros/tests/ui/immune_missing_deprecation_warning.stderr
error: use of deprecated unit struct `__ANTIGEN_IMMUNE_DEPRECATED_SomeAntigen_0::AntigenImmuneDeprecated`: use #[defended_by] on tests (code-tier) or #[presents(requires=...)] for substrate evidence — ADR-029
  --> tests/ui/immune_missing_deprecation_warning.rs:29:1
   |
29 | #[immune(SomeAntigen, witness = some_witness_fn)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/ui/immune_missing_deprecation_warning.rs:20:9
   |
20 | #![deny(deprecated)]
   |         ^^^^^^^^^^
   = note: this error originates in the attribute macro `immune` (in Nightly builds, run with -Z macro-backtrace for more info)
